tests/lean/t14.lean.expected.out
foo.a : foo.A
foo.x : foo.A
t14.lean:13:8: error: unknown identifier 'c'
foo.a : foo.A
foo.x : foo.A
t14.lean:20:8: error: unknown identifier 'c'
t14.lean:24:27: error: invalid 'using' command option, mixing explicit and implicit 'using' options
foo.a : foo.A
foo.c : foo.A
foo.A : Type
foo.f foo.a foo.c : foo.A
foo.f foo.a foo.c : foo.A
t14.lean:47:8: error: unknown identifier 'a'
foo.f foo.a foo.c : foo.A
t14.lean:53:9: error: unexpected token
